--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- //banner -->
 			
 			<!-- about us -->
-			<section class="banner-bottom" id="about">
+			<section class="p-5" id="about">
 					<div class="inner-sec">
 						<div class="row middle-grids">
 							<div class="col-lg-7 advantage-grid-info">
-								<div class="advantage_left">
+								<div class="text-center">
 									<h2 class="heading text-capitalize mb-4">About Me <span></span></h2>
 									<h4>I'm a Full Stack Web Designer </h4>
 									<p class="mb-4"> I love to work in Web Development. Because I love to solve the design problem and find easy and
@@ -110,8 +110,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</div>
 							</div>
 							<div class="col-lg-5 advantage-grid-info1">
-								<div class="advantage_left1 mt-lg-0 mt-4">
-									<img src="images/kiran pic.jpg" class="img-fluid" alt="">
+								<div class="text-center mt-lg-0 mt-4">
+									<img src="images/kiran pic.jpg" style="max-width: 600px;max-height: 400px;" class="" alt="">
 								</div>
 							</div> 
 						</div>
@@ -188,13 +188,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</section>
 			<!-- //skills -->
-
+ 
 			<!-- projects -->
-			<section class="projects" id="projects">
+			<section class="" id="projects">
 				<div class="inner-sec-layer">
-					<h3 class="heading text-capitalize mb-md-5 mb-4">Projects <span></span></h3>
+					<h3 class="heading text-capitalize mb-md-6 mb-4">Projects <span></span></h3>
 					<div class="row middle-grids">
-						<div class="col-lg-6 col-md-6 service-in text-center mt-md-0 mb-4">
+						<div class="col-lg-6 service-in text-center mt-md-0 mb-4">
 							<div class="card">
 								<div class="card-body">
 									<span class="fa fa-desktop mb-4"></span>
@@ -203,7 +203,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</div>
 							</div>
 						</div>
-						 <div class="col-lg-6 col-md-6 service-in text-center mt-md-0 mt-4">
+						 <div class="col-lg-6  service-in text-center mt-md-0 mt-4">
 							<div class="card">
 								<div class="card-body">
 									<span class="fa fa-pencil-square-o mb-4"></span>
