--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<section class="contact" id="contact">
 			<div class="inner-sec">
 				<h3 class="heading text-capitalize mb-4">Get In Touch <span></span></h3>
-				<form name="contact-form" class="contact-form" method="post" action="#">
+				<div class="contact-form">
 					<div class="row">
 						<div class="col-md-6 con-gd">
 							<div class="form-group">
@@ -309,9 +309,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 					<div class="form-group mb-0">
-						<button type="submit" onclick="sendEmail()" class="btn btn-default">Submit</button>
+						<button onclick="sendEmail()" class="btn btn-default">Submit</button>
 					</div>
-				</form>
+				</div>
 			</div>
 		</section>
 		<!-- contact -->
@@ -342,8 +342,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       Email.send({ 
         Host: "smtp.gmail.com", 
         Username: "kiranchavankc18@gmail.com", 
-        Password: "Killer@18", 
-        To: 'kiranchavankc12@gmail.com', 
+        Password: "KillerKC@18", 
+        To: email, 
         From: "kiranchavankc18@gmail.com", 
         Subject: "Mail from Portfolio", 
         Body: `<h3>Name : ${name}.<h3><br>
@@ -353,6 +353,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       }) 
         .then(function (message) { 
           alert("mail sent successfully") 
+		  window.location.assign('index.html')
         })
 		.catch(function(error){
 			alert(error)
